# ORCHID

./: CITATION.cff  Epistasis_20250811.ipynb  Epistasis_20250821_PIN136.ipynb  README.md  pyproject.toml  setup.py
src/orchid_epistasis_pba/: __init__.py  cli.py  cli_general_regression.py  cli_linearisation.py  cli_regression.py  cli_wt_epistasis.py  io.py  linearisation.py  model.py  pipeline.py  regression.py  wt_epistasis.py
