[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orchid-epistasis-pba"
version = "0.1.0"
description = "ORCHID epistasis pipeline using Partial Background Averaging (PBA) on Walsh-Hadamard transforms for WT-independent epistasis calculations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Mingxuan Jiang", email = "mj582@cam.ac.uk"}
]
keywords = ["epistasis", "Wild-type independent", "protein-engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research/Bioengineering/Protein/Epistasis",
]

# These install dependencies automatically when you pip install this library
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.0.0",
    "biopython>=1.80",
    "logomaker>=0.8",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
    "joblib>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/Creixell-lab/ORACLE"

[project.scripts]
orchid-epistasis-pba = "orchid_epistasis_pba.cli:main"
orchid-epistasis-regression-benchmark = "orchid_epistasis_pba.cli_regression:main_regression_benchmark"
wh-extension-regression = "orchid_epistasis_pba.cli_regression:main_wh_extension_regression"
orchid-regression-general = "orchid_epistasis_pba.cli_general_regression:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orchid_epistasis_pba = ["data/*.csv"]
